--- a/public/views/loginPage.html
+++ b/public/views/loginPage.html
@@ -17,7 +17,7 @@
             </div>
         </div>        
         <div id="errorDiv">
-            <div class="col s3" id="loginError">
+            <div class="animated col s3" id="loginError">
                 <b>{{error}}</b>
   		    </div>
   	     </div>
