--- a/public/views/stocks/view.html
+++ b/public/views/stocks/view.html
@@ -22,7 +22,7 @@
 		border-top: 3px double #8c8b8b;
 	}	
 </style>
-<div class="animated">
+<!-- <div class="animated"> -->
 <h2 style="font-family: 'Raleway', sans-serif; margin-top: 50px">STOCK CENTRAL </h2>
 <h4 style="font-family: 'Montserrat', sans-serif;"> &nbsp;TOTAL ITEMS IN DATABASE : <div class="animated swing" style="display: inline-block;">{{total}}</div></h4> 
   <div class="input-field" style="position: absolute; top:120px; right:65px; float: right; width:300px;">
