--- a/public/views/billing/view.html
+++ b/public/views/billing/view.html
@@ -122,7 +122,7 @@
 
 	</div>
 		<div class="modal-footer">
-			<button style="position: relative; bottom: 5px; height:43px; background-color: #d32f2f" class="waves-effect waves-light btn-large" id="checkoutBtn" ng-model="checkoutBtn" ng-click="no()"><font size="4"><span style="position: relative; bottom: 5px;"><i class="fa fa-ban"></i> CANCEL </span></font></button>
+			<button style="position: relative; bottom: 5px; height:43px; background-color: #d32f2f" class="waves-effect waves-light btn-large" id="checkoutBtn" ng-model="checkoutBtn" ng-click="no()"><font size="4"><span style="position: relative; bottom: 5px;"><i class="fa fa-times"></i> CLOSE </span></font></button>
 			<button style="position: relative; bottom: 5px; height:43px; background-color: #388e3c" class="waves-effect waves-light btn-large" id="checkoutBtn" ng-model="payNowBtn" ng-click="payNow()" ng-disabled="!check() || t"><font size="4" ><span style="position: relative; bottom: 5px;"> PAY NOW <i class="fa fa-inr"></i></span></font></button>	
 		</div>
 </div>
