--- a/public/views/orders/new.html
+++ b/public/views/orders/new.html
@@ -36,7 +36,7 @@
 <h4 style="font-family: 'Montserrat', sans-serif;"> {{titleMsg}} <div class="animated swing" style="display: inline-block;">{{total}}</div></h4> 
   <div class="input-field animated" style="position: absolute; top:120px; right:65px; float: right; width:300px;" id="searchContainer">
   <i class="fa fa-search prefix" id="searchIcon" ng-mouseenter="expandSearch()"></i>
-    <input type="text"  placeholder="SEARCH HERE.." ng-model="search" ng-init="" ng-focus="searchFocus()" ng-blur="compressSearch()" id="search" style="width: 0px">
+    <input type="text"  placeholder="SEARCH HERE.." ng-model="search" ng-init="" ng-focus="searchFocus()" ng-blur="compressSearch()" ng-keyup="searchBlur()" id="search" style="width: 0px">
   </div> 
 
 <table class="table table-hover table-responsive list animated" id="custList">
