Done With Rewrite Of Item Branch

--- a/public/views/stocks/new.html
+++ b/public/views/stocks/new.html
@@ -15,7 +15,7 @@
   </div>
   <div class="input-group input-group-lg" style="margin-left: 150px;">
   <span class="input-group-addon"><i class="fa fa-hand-paper-o"></i></span>
-    <input type="" class="form-control" style="width:150px;height:52px; " placeholder="Stock In Hand" ng-model="stockInHand" ng-keyup="checkNumber('stockInHand')" ng-blur="rst('valid');rst('temp')" id="stockInHand">
+    <input type="" class="form-control" style="width:150px;height:52px; " placeholder="Stock In Hand" ng-model="availableStock" ng-keyup="checkNumber('availableStock')" ng-blur="rst('valid');rst('temp')" id="availableStock">
   </div>
   <br><br>
   <div class="input-group input-group-lg">
