--- a/public/views/stocks/view.html
+++ b/public/views/stocks/view.html
@@ -93,7 +93,7 @@
 				<thead>
 					<th width ="35%"><i class="fa fa-user-o" style="font-size: 12px"></i> NAME</th>
 					<th width ="15%"><i class="fa fa-phone" style="font-size: 15px"></i> CONTACT</th>
-					<th width ="16%"><center><i class="fa fa-truck" style="font-size: 15px"></i> PICKED UP</center></th>
+					<th width ="16%"><center><i class="fa fa-truck" style="font-size: 15px"></i> DELIVERED</center></th>
 					<th width ="16%"><center><i class="fa fa-calendar" style="font-size: 15px"></i> WILL RETURN</center></th>
 					<th width ="16%"><center> QUANTITY <i class="fa fa-cube" style="font-size: 15px"></i></center></th>
 				</thead>
