--- a/public/views/orders/new.html
+++ b/public/views/orders/new.html
@@ -176,7 +176,7 @@
   		&nbsp;&nbsp;<div class="input-field animated" id="quantity" style="display: inline-block;">
     		<input type="number" ng-model="qty" ng-keydown="tap(enrollItem())" id="qtySearch" ng-init="qty=1" min="1" max="{{item.availableStock}}" style="font-size: 20px; width: 50px">
   		</div> 
-  		<div id="maxVal" style="display: inline-block;">(MAX : {{item.totalStock}} )</div>
+  		<div id="maxVal" class="animated" style="display: inline-block;">(MAX : {{item.totalStock}} )</div>
   		<form style="display: inline-block;">
 		<button class="btn waves-effect waves-light" style="background-color: #388E3C" type="submit" name="sbm" ng-click="enrollItem()"><i class="fa fa-check"></i></button>
 		&nbsp;&nbsp;&nbsp;&nbsp;
